[NAE-2235] Improve Efficiency of Database Reads and Saves - improve consistency in WorkflowController